--- a/site.css
+++ b/site.css
@@ -10,47 +10,50 @@
 
 .app-header {
     text-align: center;
+    color: black;
+    background-color: white;
+    border: none;
 }
-  
+
 .return-home {
     color: #4f3674;
     text-decoration: none;
-  }
-  
+}
+
 .return-home:hover {
     background-color: #d6a800;
     color: #4f3674;
-  }
-  
+}
+
 .return-home:visited {
     color: #3c275a;
-  }
+}
 
 .form {
     display: inline-grid;
     grid-template-columns: auto;
-  }
-  
+}
+
 .form-field {
     padding: 20px;
-  }
+}
 
 .full-width {
     width: 100%;
-  }
+}
 
 .assign-container {
-  padding: 10px;
+    padding: 10px;
 }
 
 .assign-content {
-  width: 600px;
-  margin: 3% auto 0;
+    width: 600px;
+    margin: 3% auto 0;
 }
 
 .assign-results-text {
-  text-align: center;
-  font-size: 28px;
+    text-align: center;
+    font-size: 28px;
 }
 
 #container {
