--- a/theme.css
+++ b/theme.css
@@ -12,23 +12,23 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     background-color: var(--card-background-color);
-  }
-  
+}
+
 .card-title {
     text-align: center;
     font-size: 2em;
     color: var(--card-title-color);
     font-weight: 400;
-  }
-  
+}
+
 .card-content {
     padding: 2px 16px;
-  }
-  
+}
+
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
-  
+}
+
 .btn {
     border: none;
     text-align: center;
@@ -39,8 +39,8 @@
     cursor: pointer;
     padding: 15px 32px;
     color: black;
-  }
-  
+}
+
 .input {
     padding: 12px 20px;
     margin: 8px 0;
@@ -48,8 +48,8 @@
     border: 1px solid var(--input-border-color);
     border-radius: 4px;
     box-sizing: border-box;
-  }
-  
+}
+
 .drop-down-menu {
     padding: 12px 20px;
     margin: 8px 0;
@@ -57,17 +57,17 @@
     border: 1px solid var(--input-border-color);
     border-radius: 4px;
     box-sizing: border-box;
-  }
-  
+}
+
 .btn-primary {
     background-color: var(--btn-background-color);
     color: var(--btn-color);
-  }
-  
+}
+
 .btn-primary:hover {
     background-color: var(--btn-hover-background-color);
     color: var(--btn-hover-color);
-  }
+}
 
 /* Light Theme Styling*/
 
@@ -89,7 +89,7 @@ body.light-theme {
     --btn-hover-background-color: #d6a800;
     --btn-hover-color: #4f3674;
     --input-border-color: #ccc;
-  }
+}
 
 /* Dark Theme Styling */
 
@@ -102,7 +102,7 @@ body.dark-theme {
     --heading-background-color: #424242;
     --heading-color: #fff;
     --heading-border-color: #424242;
-    --anchor-hover-color: #D176e1;
+    --anchor-hover-color: #d176e1;
     --anchor-hover-background-color: #303030;
     --card-background-color: #424242;
     --card-title-color: #d176e1;
@@ -111,10 +111,10 @@ body.dark-theme {
     --btn-hover-background-color: #7d4787;
     --btn-hover-color: #fff;
     --input-border-color: #303030;
-  }
+}
 
 body {
-    font-family: 'Oswald', Verdana, Arial, sans-serif;
+    font-family: "Oswald", Verdana, Arial, sans-serif;
     color: var(--text-color);
     background: var(--background-color);
 }
@@ -136,7 +136,9 @@ h1 {
     border: solid 1px var(--h1-border-color);
 }
 
-h2, h3, h4 {
+h2,
+h3,
+h4 {
     color: var(--heading-color);
     background-color: var(--heading-background-color);
     padding: 10px;
