--- a/theme.css
+++ b/theme.css
@@ -89,6 +89,11 @@ body.light-theme {
     --btn-hover-background-color: #d6a800;
     --btn-hover-color: #4f3674;
     --input-border-color: #ccc;
+    --table-header-background-color: #4f3674;
+    --table-header-color: #fff;
+    --table-border-color: #ddd;
+    --table-hover-background-color: #d6a800;
+    --table-hover-color: #4f3674;
 }
 
 /* Dark Theme Styling */
@@ -111,6 +116,11 @@ body.dark-theme {
     --btn-hover-background-color: #7d4787;
     --btn-hover-color: #fff;
     --input-border-color: #303030;
+    --table-header-background-color: #d176e1;
+    --table-header-color: #fff;
+    --table-border-color: #303030;
+    --table-hover-background-color: #7d4787;
+    --table-hover-color: #fff;
 }
 
 body {
@@ -143,4 +153,31 @@ h4 {
     background-color: var(--heading-background-color);
     padding: 10px;
     border: solid 1px var(--heading-border-color);
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+th {
+    border: 1px solid var(--table-border-color);
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 0.25em;
+    text-align: left;
+    background-color: var(--table-header-background-color);
+    color: var(--table-header-color);
+}
+
+td {
+    border: 1px solid var(--table-border-color);
+    padding-left: 0.25em;
+}
+
+tr:hover {
+    background-color: var(--table-hover-background-color);
+    color: var(--table-hover-color);
+    cursor: pointer;
 }
