Assignment 5.2 Update - Comments and Validation Added

--- a/week-5/hartung-bobs-auto-repair.css
+++ b/week-5/hartung-bobs-auto-repair.css
@@ -1,3 +1,14 @@
+/*
+============================================
+; Title: hartung-bobs-auto-repair.css
+; Author: Professor Krasso
+; Date: 3 February 2022
+; Modified By: Joel Hartung
+; Description: This is a CSS file used for Assignment 4.2
+; Code Attribution: Additional code from the Assignment 5 document
+;===========================================
+*/
+
 #cart-message {
     float: right;
     color: #df546a;
