--- a/week-6/hartung-future-value.css
+++ b/week-6/hartung-future-value.css
@@ -1,3 +1,14 @@
+/*
+============================================
+; Title: hartung-future-value.css
+; Author: Professor Krasso
+; Date: 8 February 2022
+; Modified By: Joel Hartung
+; Description: This is a CSS file used for Assignment 6.2
+; Code Attribution: Additional code from the Assignment 6 document
+;===========================================
+*/
+
 .danger {
     float: right;
     color: #df546a;
